Bug 448776 - ffmpegthumbs-21.12.1 with ffmpeg-5: error: invalid conversion from ‘AVCodec**’ to ‘const AVCodec**’
Summary: ffmpegthumbs-21.12.1 with ffmpeg-5: error: invalid conversion from ‘AVCodec**...
Status: RESOLVED FIXED
Alias: None
Product: kdemultimedia
Classification: Unmaintained
Component: ffmpegthumbs (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-01-19 14:31 UTC by Andreas Sturmlechner
Modified: 2022-03-15 23:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Sturmlechner 2022-01-19 14:31:51 UTC
See also downstream report (including full build.log):

https://bugs.gentoo.org/831480
Comment 1 Sérgio Basto 2022-02-26 22:47:52 UTC
https://invent.kde.org/multimedia/ffmpegthumbs/-/merge_requests/16 seems to work
Comment 2 Antonio Rojas 2022-03-15 22:59:13 UTC
Git commit d27049f9a62c63dd3898d8f7c5fff2244c13af86 by Antonio Rojas.
Committed on 15/03/2022 at 22:58.
Pushed by arojas into branch 'master'.

Fix build with FFmpeg 5

AVCodec is const in FFmpeg 5

M  +4    -0    ffmpegthumbnailer/moviedecoder.h

https://invent.kde.org/multimedia/ffmpegthumbs/commit/d27049f9a62c63dd3898d8f7c5fff2244c13af86
Comment 3 Antonio Rojas 2022-03-15 23:00:05 UTC
Git commit fcec5f2ccae65fd4db2924ffec39cea2aba36e73 by Antonio Rojas.
Committed on 15/03/2022 at 22:59.
Pushed by arojas into branch 'release/22.04'.

Fix build with FFmpeg 5

AVCodec is const in FFmpeg 5
(cherry picked from commit d27049f9a62c63dd3898d8f7c5fff2244c13af86)

M  +4    -0    ffmpegthumbnailer/moviedecoder.h

https://invent.kde.org/multimedia/ffmpegthumbs/commit/fcec5f2ccae65fd4db2924ffec39cea2aba36e73