Fix build with FFmpeg 5

AVCodec is const in FFmpeg 5

BUG: 448776
(cherry picked from commit d27049f9a62c63dd3898d8f7c5fff2244c13af86)